# arcfutil

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  package.json  parser.py  pyproject.toml  setup.py  songlist.py  sortassets.py
.github/workflows/: python-publish.yml
Aff/: AffNote.py  Parser.py  __init__.py
aff/: __init__.py  exception.py  note.py  parser.py  sorter.py
docs/: README.md
docs/.vuepress/: config.js
docs/api/: README.md  aff-easing.md  aff-generator.md  aff-note-easing.md  aff-note-validstrings.md  aff-note.md  aff.md  cv.md  exception.md
docs/guide/: README.md  cli-tools.md  cv.md  easing.md  install.md  package-aff.md
src/: __init__.py  quick_start.py
src/arcfutil/: __init__.py  __main__.py  arcade_clean.py  cli.py  exception.py  songlist.py
src/arcfutil/aff/: __init__.py  easing.py  note.py  parser.py  sorter.py  template.py
src/arcfutil/aff/easing/: __init__.py  bezier.py  cheatsheet.py  easing_getter.py  simple_easings.py  slicer.py
src/arcfutil/aff/generator/: __init__.py  arc_sample.py  timing_sample.py
src/arcfutil/aff/note/: __init__.py  arc.py  camera.py  common_note.py  easing.py  exception.py  flick.py  hold.py  note.py  notegroup.py  scenecontrol.py  tap.py  timing.py  validstrings.py
src/arcfutil/cli/: songlist.py  sortassets.py
